Added node names for running locally

--- a/apps/one/Makefile
+++ b/apps/one/Makefile
@@ -4,10 +4,10 @@ build:
 	docker build -t $(IMAGE_NAME) .
 
 run:
-	mix run --no-halt
+	elixir --name one@127.0.0.1 -S mix run --no-halt
 
 iex:
-	iex -S mix
+	iex --name one@127.0.0.1 -S mix
 
 docker:
 	docker run --rm $(IMAGE_NAME)
