Deploy pods with OTP releases

--- a/apps/two/Makefile
+++ b/apps/two/Makefile
@@ -1,16 +1,25 @@
+APP_NAME = two
 IMAGE_NAME = cluster-test/two
+REL_IMAGE_NAME = cluster-test/two-rel
+REL_DOCKERFILE = ../../Dockerfile.rel
 
 build:
 	docker build -t $(REGISTRY_IP)/$(IMAGE_NAME) .
 
+build-rel:
+	docker build -f $(REL_DOCKERFILE) --build-arg APP_NAME=$(APP_NAME) -t $(REGISTRY_IP)/$(REL_IMAGE_NAME) .
+
 push:
 	docker push $(REGISTRY_IP)/$(IMAGE_NAME)
 
+push-rel:
+	docker push $(REGISTRY_IP)/$(REL_IMAGE_NAME)
+
 run:
-	elixir --name two@127.0.0.1 -S mix run --no-halt
+	elixir --name $(APP_NAME)@127.0.0.1 -S mix run --no-halt
 
 iex:
-	iex --name two@127.0.0.1 -S mix
+	iex --name $(APP_NAME)@127.0.0.1 -S mix
 
 docker:
 	docker run --rm $(IMAGE_NAME)
