--- a/Dockerfile.rel
+++ b/Dockerfile.rel
@@ -1,6 +1,6 @@
 FROM bitwalker/alpine-elixir-phoenix:1.9.0 AS builder
 
-ARG APP_NAME=cluster_test
+ARG APP_NAME
 ARG MIX_ENV=prod
 
 ENV APP_NAME=${APP_NAME} \
@@ -22,7 +22,7 @@ RUN \
 
 FROM alpine:3.9
 
-ARG APP_NAME=cluster_test
+ARG APP_NAME
 
 RUN apk update && \
     apk add --no-cache \
@@ -34,5 +34,6 @@ ENV APP_NAME=${APP_NAME}
 WORKDIR /opt/app
 
 COPY --from=builder /opt/built .
+ADD entrypoint.sh ./
 
-CMD /opt/app/bin/${APP_NAME} start
+ENTRYPOINT ./entrypoint.sh
